# DSBA-project-1

./: .gitignore  README.md  docker-compose.yml  start.sh
app/backend/: Dockerfile  pyproject.toml
app/backend/backend/: __main__.py
app/frontend/: Dockerfile  pyproject.toml
app/frontend/frontend/: app.py
ipynb/: main.ipynb  processor.ipynb
scripts/: processe_data.py
