[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["bani2016up <bani2016up@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = '0.115.6'
uvicorn = "0.32.1"
pandas = "2.2.3"
plotly = "5.24.1"
requests = "2.32.3"
kaleido = "0.2.1"
pillow = "11.0.0"
streamlit = "1.40.2"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
