[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["bani2016up <bani2016up@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.40.2"
plotly = "5.24.1"
tqdm = "4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
